# api/src/main/kotlin/edu/wgu/osmt/api/model/ApiSortEnum.kt
@@ -95,27 +95,27 @@ enum class CollectionSortEnum(override val apiValue: String) : SortOrder {
  * Provides an enum for Keywords that defines elasticsearch sorting
  */
 enum class KeywordSortEnum(override val apiValue: String) : SortOrder {
-    KeywordAsc("keyword.asc") {
-        override val sort = Sort.by("value").ascending()
+    KeywordNameAsc("name.asc") {
+        override val sort = Sort.by("value.sort_insensitive").ascending()
     },
-    KeywordDesc("keyword.desc") {
-        override val sort = Sort.by("value").descending()
+    KeywordNameDesc("name.desc") {
+        override val sort = Sort.by("value.sort_insensitive").descending()
     },
-    SkillCountAsc("skillCount.asc") {
-        override val sort = Sort.by("skillCount").ascending()
+    KeywordFrameworkAsc("framework.asc") {
+        override val sort = Sort.by("framework.sort_insensitive").ascending()
     },
-    SkillCountDesc("skillCount.desc") {
-        override val sort = Sort.by("skillCount").descending()
+    KeywordFrameworkDesc("framework.desc") {
+        override val sort = Sort.by("framework.sort_insensitive").descending()
     };
 
     companion object : SortOrderCompanion<KeywordSortEnum> {
         override val logger: Logger = LoggerFactory.getLogger(KeywordSortEnum::class.java)
 
-        override val defaultSort = KeywordAsc
+        override val defaultSort = KeywordNameAsc
 
         override fun forApiValue(apiValue: String): KeywordSortEnum {
-            return values().find { it.apiValue == apiValue } ?: KeywordAsc.also {
-                logger.warn("Sort with value ${apiValue} could not be found; using default ${KeywordAsc.apiValue} sort")
+            return values().find { it.apiValue == apiValue } ?: KeywordNameAsc.also {
+                logger.warn("Sort with value ${apiValue} could not be found; using default ${KeywordNameAsc.apiValue} sort")
             }
         }
     }
